force-app/main/default/objects/DD_Rate_Table__c/DD_Rate_Table__c.object-meta.xml
<CustomObject>
    <description>Rate table headers organized by segment, rate level, and effective date</description>
    <label>Rate Table</label>
    <nameField><displayFormat>RT-{00000}</displayFormat><label>Table ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Rate Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>