force-app/main/default/objects/DD_Rate_Table__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
    <description>Date rates expire</description>
</CustomField>