force-app/main/default/objects/DD_Rate_Table__c/fields/Rate_Level__c.field-meta.xml
<CustomField>
    <fullName>Rate_Level__c</fullName>
    <label>Rate Level</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Level 1</fullName><default>false</default><label>Level 1</label></value><value><fullName>Level 2</fullName><default>false</default><label>Level 2</label></value><value><fullName>All</fullName><default>false</default><label>All</label></value></valueSetDefinition></valueSet>
    <description>Industry rate level</description>
</CustomField>