force-app/main/default/objects/DD_Rate_Table__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value></valueSetDefinition></valueSet>
    <description>Table lifecycle status</description>
</CustomField>