force-app/main/default/objects/DD_Rate_Table__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <label>Table Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Descriptive name e.g. CA SB PPO 2025 Level 1</description>
</CustomField>