force-app/main/default/objects/DD_Rate_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Table_Name__c</columns>
    <columns>Segment__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Rate_Level__c</columns>
</ListView>